--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="./css/slyles.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -22,166 +26,178 @@
 
   <body>
     <header>
-      <nav>
-        <a href="./index.html" class="logo link"
-          >Web<span class="web-accent">Studio</span></a
-        >
-        <ul class="page-navigation list">
-          <li>
-            <a class="link" href="./index.html">Studio</a>
-          </li>
-          <li>
-            <a class="link" href="./portfolio.html">Portfolio</a>
-          </li>
-          <li>
-            <a class="link" href="">Contacts</a>
-          </li>
-        </ul>
-      </nav>
-      <!--contacts-->
-      <address class="address-block">
-        <ul class="list">
-          <li>
-            <a class="link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a>
-          </li>
-        </ul>
-      </address>
+      <div class="container header-container">
+        <nav class="nav">
+          <a href="./index.html" class="logo link"
+            >Web<span class="web-accent">Studio</span></a
+          >
+          <ul class="page-navigation list">
+            <li>
+              <a class="link" href="./index.html">Studio</a>
+            </li>
+            <li>
+              <a class="link" href="./portfolio.html">Portfolio</a>
+            </li>
+            <li>
+              <a class="link" href="">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <!--contacts-->
+        <address class="address-block">
+          <ul class="list">
+            <li>
+              <a class="link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
 
     <main>
       <!--Hero section-->
-      <section class="hero">
-        <h1 class="main-title">Effective Solutions for Your Business</h1>
-        <button class="button-hero" type="button">Order Service</button>
+      <section class="hero hero-section">
+        <div class="container hero-container">
+          <h1 class="main-title">Effective Solutions for Your Business</h1>
+          <button class="button-hero" type="button">Order Service</button>
+        </div>
       </section>
 
-      <section class="benefits">
+      <section class="benefits section">
         <!--наші переваги benefits-->
-        <h2 hidden class="title-text">Our preferences</h2>
-        <ul class="list benefits-list">
-          <li>
-            <h3 class="subtitle">Strategy</h3>
-            <p class="index-text">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li>
-            <h3 class="subtitle">Punctuality</h3>
-            <p class="index-text">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li>
-            <h3 class="subtitle">Diligence</h3>
-            <p class="index-text">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li>
-            <h3 class="subtitle">Technologies</h3>
-            <p class="index-text">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="title-text visually-hidden">Our preferences</h2>
+          <ul class="list benefits-list">
+            <li>
+              <h3 class="subtitle">Strategy</h3>
+              <p class="index-text">
+                Our goal is to identify the business problem to walk away with the
+                perfect and creative solution.
+              </p>
+            </li>
+            <li>
+              <h3 class="subtitle">Punctuality</h3>
+              <p class="index-text">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li>
+              <h3 class="subtitle">Diligence</h3>
+              <p class="index-text">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li>
+              <h3 class="subtitle">Technologies</h3>
+              <p class="index-text">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!--чим ми займаємось-->
-      <section class="actions">
-        <h2 class="title-text">What are we doing</h2>
-        <ul class="actions-list list">
-          <li>
-            <img
-              src="./images/img1.jpg"
-              alt="Computer screen"
-              width="360"
-              height="300"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/img2.jpg"
-              alt="Communication in chats"
-              width="360"
-              height="300"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/img3.jpg"
-              alt="Mobile app"
-              width="360"
-              height="300"
-            />
-          </li>
-        </ul>
+      <section class="actions section">
+        <div class="container">
+          <h2 class="title-text section-title">What are we doing</h2>
+          <ul class="actions-list list">
+            <li>
+              <img
+                src="./images/img1.jpg"
+                alt="Computer screen"
+                width="360"
+                height="300"
+              />
+            </li>
+            <li>
+              <img
+                src="./images/img2.jpg"
+                alt="Communication in chats"
+                width="360"
+                height="300"
+              />
+            </li>
+            <li>
+              <img
+                src="./images/img3.jpg"
+                alt="Mobile app"
+                width="360"
+                height="300"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!--наша команда-->
-      <section class="team-block">
-        <h2 class="title-text">Our Team</h2>
-        <ul class="team-list list">
-          <li class="picture">
-            <img
-              src="./images/img4.jpg"
-              alt="A man with a beard"
-              width="264"
-              height="260"
-            />
-            <h3 class="subtitle">Mark Guerrero</h3>
-            <p class="index-text">Product Designer</p>
-          </li>
-          <li class="picture">
-            <img
-              src="./images/img5.jpg"
-              alt="A smiling man"
-              width="264"
-              height="260"
-            />
-            <h3 class="subtitle">Tom Ford</h3>
-            <p class="index-text">Frontend Developer</p>
-          </li>
-          <li class="picture">
-            <img
-              src="./images/img6.jpg"
-              alt="A young woman"
-              width="264"
-              height="260"
-            />
-            <h3 class="subtitle">Camila Garcia</h3>
-            <p class="index-text">Marketing</p>
-          </li>
-          <li class="picture">
-            <img
-              src="./images/img7.jpg"
-              alt="A smiling man"
-              width="264"
-              height="260"
-            />
-            <h3 class="subtitle">Daniel Wilson</h3>
-            <p class="index-text">UI Designer</p>
-          </li>
-        </ul>
+      <section class="team-block section">
+        <div class="container">
+          <h2 class="title-text section-title">Our Team</h2>
+          <ul class="team-list list">
+            <li class="picture">
+              <img
+                src="./images/img4.jpg"
+                alt="A man with a beard"
+                width="264"
+                height="260"
+              />
+              <h3 class="subtitle">Mark Guerrero</h3>
+              <p class="index-text">Product Designer</p>
+            </li>
+            <li class="picture">
+              <img
+                src="./images/img5.jpg"
+                alt="A smiling man"
+                width="264"
+                height="260"
+              />
+              <h3 class="subtitle">Tom Ford</h3>
+              <p class="index-text">Frontend Developer</p>
+            </li>
+            <li class="picture">
+              <img
+                src="./images/img6.jpg"
+                alt="A young woman"
+                width="264"
+                height="260"
+              />
+              <h3 class="subtitle">Camila Garcia</h3>
+              <p class="index-text">Marketing</p>
+            </li>
+            <li class="picture">
+              <img
+                src="./images/img7.jpg"
+                alt="A smiling man"
+                width="264"
+                height="260"
+              />
+              <h3 class="subtitle">Daniel Wilson</h3>
+              <p class="index-text">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
     <footer class="footer">
-      <a href="./index.html" class="logo link">Web
-        <span class="web-accent">Studio</span></a
-      >
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container footer-container">
+        <a href="./index.html" class="logo link"
+          >Web <span class="web-accent">Studio</span></a
+        >
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with digital
+          marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
