--- a/portfolio.html
+++ b/portfolio.html
@@ -2,6 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="./css/slyles.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -22,171 +26,183 @@
 
   <body>
     <header>
-      <nav>
-        <a href="./index.html" class="logo link"
-          >Web<span class="web-accent">Studio</span></a
-        >
-        <ul class="page-navigation list">
-          <li>
-            <a class="link" href="./index.html">Studio</a>
-          </li>
-          <li>
-            <a class="link" href="./portfolio.html">Portfolio</a>
-          </li>
-          <li>
-            <a class="link" href="">Contacts</a>
-          </li>
-        </ul>
-      </nav>
-      <!--contacts-->
-      <address class="address-block">
-        <ul class="list">
-          <li>
-            <a class="link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a>
-          </li>
-        </ul>
-      </address>
+      <div class="container">
+        <nav>
+          <a href="./index.html" class="logo link"
+            >Web<span class="web-accent">Studio</span></a
+          >
+          <ul class="page-navigation list">
+            <li>
+              <a class="link" href="./index.html">Studio</a>
+            </li>
+            <li>
+              <a class="link" href="./portfolio.html">Portfolio</a>
+            </li>
+            <li>
+              <a class="link" href="">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <!--contacts-->
+        <address class="address-block">
+          <ul class="list">
+            <li>
+              <a class="link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
 
     <main>
-      <section class="filter">
+      <section class="filter portfolio-section">
         <h1 hidden>Portfolio</h1>
-        <ul class="filter-list list">
-          <li>
-            <button class="button-nav" type="button">All</button>
-          </li>
-          <li>
-            <button class="button-nav" type="button">Web Site</button>
-          </li>
-          <li>
-            <button class="button-nav" type="button">App</button>
-          </li>
-          <li>
-            <button class="button-nav" type="button">Design</button>
-          </li>
-          <li>
-            <button class="button-nav" type="button">Marketing</button>
-          </li>
-        </ul>
-
-        <ul class="list-portfolio list">
-          <li>
-            <a class="link" href="">
-              <img
-              src="./images/img1a1.jpg"
-              alt="BankApp pages"
-              width="360"
-              height="300"
-              >
-            
-            <h2 class="subtitle">Banking App Interface Concept</h2>
-            <p class="index-text">App</p>
-          </a>
-          </li>
-          <li>
-            <a class="link" href=""><img
-              src="./images/img1a2.jpg"
-              alt="NFC payment"
-              width="360"
-              height="300"
-            >
-            <h2 class="subtitle">Cashless Payment</h2>
-            <p class="index-text">Marketing</p>
-          </a>
-          </li>
-          <li>
-            <a class="link" href=""><img
-              src="./images/img1a3.jpg"
-              alt="Return to normalcy"
-              width="360"
-              height="300"
-            >
-            <h2 class="subtitle">Meditation App</h2>
-            <p class="index-text">App</p>
-          </a>
-          </li>
-          <li>
-            <a class="link" href=""><img
-              src="./images/img1a4.jpg"
-              alt="Taxi driver"
-              width="360"
-              height="300"
-            >
-            <h2 class="subtitle">Taxi Service</h2>
-            <p class="index-text">Marketing</p>
-          </a>
-          </li>
-          <li>
-            <a class="link" href=""><img
-              src="./images/img1a5.jpg"
-              alt="Design pictures"
-              width="360"
-              height="300"
-            >
-            <h2 class="subtitle">Screen Illustrations</h2>
-            <p class="index-text">Design</p>
-          </a>
-          </li>
-          <li>
-            <a class="link" href=""><img
-              src="./images/img1a6.jpg"
-              alt="Happy girl"
-              width="360"
-              height="300"
-            >
-            <h2 class="subtitle">Online Courses</h2>
-            <p class="index-text">Marketing</p>
-          </a>
-          </li>
-          <li>
-            <a class="link" href=""><img
-              src="./images/img1a7.jpg"
-              alt="Instagram ideas"
-              width="360"
-              height="300"
-            >
-            <h2 class="subtitle">Instagram Stories Concept</h2>
-            <p class="index-text">Design</p>
-          </a>
-          </li>
-          <li>
-            <a class="link" href=""><img
-              src="./images/img1a8.jpg"
-              alt="Food in the bag"
-              width="360"
-              height="300"
-            >
-            <h2 class="subtitle">Organic Food</h2>
-            <p class="index-text">Web Site</p>
-          </a>
-          </li>
-          <li>
-            <a class="link" href=""><img
-              src="./images/img1a9.jpg"
-              alt="Cup of coffee"
-              width="360"
-              height="300"
-            >
-            <h2 class="subtitle">Fresh Coffee</h2>
-            <p class="index-text">Web Site</p>
-          </a>
-          </li>
-        </ul>
+        <div class="container">
+          <ul class="filter-list list">
+            <li>
+              <button class="button-nav" type="button">All</button>
+            </li>
+            <li>
+              <button class="button-nav" type="button">Web Site</button>
+            </li>
+            <li>
+              <button class="button-nav" type="button">App</button>
+            </li>
+            <li>
+              <button class="button-nav" type="button">Design</button>
+            </li>
+            <li>
+              <button class="button-nav" type="button">Marketing</button>
+            </li>
+          </ul>
+          <ul class="list-portfolio list">
+            <li>
+              <a class="link" href="">
+                <img
+                  src="./images/img1a1.jpg"
+                  alt="BankApp pages"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="subtitle">Banking App Interface Concept</h2>
+                <p class="index-text">App</p>
+              </a>
+            </li>
+            <li>
+              <a class="link" href=""
+                ><img
+                  src="./images/img1a2.jpg"
+                  alt="NFC payment"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="subtitle">Cashless Payment</h2>
+                <p class="index-text">Marketing</p>
+              </a>
+            </li>
+            <li>
+              <a class="link" href=""
+                ><img
+                  src="./images/img1a3.jpg"
+                  alt="Return to normalcy"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="subtitle">Meditation App</h2>
+                <p class="index-text">App</p>
+              </a>
+            </li>
+            <li>
+              <a class="link" href=""
+                ><img
+                  src="./images/img1a4.jpg"
+                  alt="Taxi driver"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="subtitle">Taxi Service</h2>
+                <p class="index-text">Marketing</p>
+              </a>
+            </li>
+            <li>
+              <a class="link" href=""
+                ><img
+                  src="./images/img1a5.jpg"
+                  alt="Design pictures"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="subtitle">Screen Illustrations</h2>
+                <p class="index-text">Design</p>
+              </a>
+            </li>
+            <li>
+              <a class="link" href=""
+                ><img
+                  src="./images/img1a6.jpg"
+                  alt="Happy girl"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="subtitle">Online Courses</h2>
+                <p class="index-text">Marketing</p>
+              </a>
+            </li>
+            <li>
+              <a class="link" href=""
+                ><img
+                  src="./images/img1a7.jpg"
+                  alt="Instagram ideas"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="subtitle">Instagram Stories Concept</h2>
+                <p class="index-text">Design</p>
+              </a>
+            </li>
+            <li>
+              <a class="link" href=""
+                ><img
+                  src="./images/img1a8.jpg"
+                  alt="Food in the bag"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="subtitle">Organic Food</h2>
+                <p class="index-text">Web Site</p>
+              </a>
+            </li>
+            <li>
+              <a class="link" href=""
+                ><img
+                  src="./images/img1a9.jpg"
+                  alt="Cup of coffee"
+                  width="360"
+                  height="300"
+                />
+                <h2 class="subtitle">Fresh Coffee</h2>
+                <p class="index-text">Web Site</p>
+              </a>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="footer">
-      <a href="./index.html" class="logo link"
-        >Web<span class="web-accent">Studio</span></a
-      >
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <a href="./index.html" class="logo link"
+          >Web<span class="web-accent">Studio</span></a
+        >
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with digital
+          marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
