--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
       <!--чим ми займаємось-->
       <section class="actions section">
-        <div class="container">
+        <div class="action-container container">
           <h2 class="title-text section-title">What are we doing</h2>
           <ul class="actions-list list">
             <li>
@@ -140,7 +140,7 @@
 
       <!--наша команда-->
       <section class="team-block section">
-        <div class="container">
+        <div class="team-container container">
           <h2 class="title-text section-title">Our Team</h2>
           <ul class="team-list list">
             <li class="picture">
@@ -150,8 +150,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="subtitle">Mark Guerrero</h3>
-              <p class="index-text">Product Designer</p>
+              <div class="team-name-content">
+                <h3 class="subtitle">Mark Guerrero</h3>
+                <p class="index-text">Product Designer</p>
+              </div>
             </li>
             <li class="picture">
               <img
@@ -160,8 +162,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="subtitle">Tom Ford</h3>
-              <p class="index-text">Frontend Developer</p>
+              <div class="team-name-content">
+                <h3 class="subtitle">Tom Ford</h3>
+                <p class="index-text">Frontend Developer</p>
+              </div>
             </li>
             <li class="picture">
               <img
@@ -170,8 +174,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="subtitle">Camila Garcia</h3>
-              <p class="index-text">Marketing</p>
+              <div class="team-name-content">
+                <h3 class="subtitle">Camila Garcia</h3>
+                <p class="index-text">Marketing</p>
+              </div>
             </li>
             <li class="picture">
               <img
@@ -180,8 +186,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="subtitle">Daniel Wilson</h3>
-              <p class="index-text">UI Designer</p>
+              <div class="team-name-content">
+                <h3 class="subtitle">Daniel Wilson</h3>
+                <p class="index-text">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
