--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,7 @@
 
   <body>
     <header>
-      <div class="container">
+      <div class="header-container container">
         <nav>
           <a href="./index.html" class="logo link"
             >Web<span class="web-accent">Studio</span></a
@@ -61,8 +61,9 @@
 
     <main>
       <section class="filter portfolio-section">
-        <h1 hidden>Portfolio</h1>
-        <div class="container">
+        <div class="fiter-portfolio-container container">
+          <h1 class="visually-hidden">Portfolio</h1>
+        
           <ul class="filter-list list">
             <li>
               <button class="button-nav" type="button">All</button>
@@ -89,8 +90,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="subtitle">Banking App Interface Concept</h2>
-                <p class="index-text">App</p>
+                <div class="portfolio-content">
+                  <h2 class="subtitle">Banking App Interface Concept</h2>
+                  <p class="index-text">App</p>
+                </div>
               </a>
             </li>
             <li>
@@ -101,8 +104,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="subtitle">Cashless Payment</h2>
-                <p class="index-text">Marketing</p>
+                <div class="portfolio-content">
+                  <h2 class="subtitle">Cashless Payment</h2>
+                  <p class="index-text">Marketing</p>
+                </div>
               </a>
             </li>
             <li>
@@ -113,8 +118,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="subtitle">Meditation App</h2>
-                <p class="index-text">App</p>
+                <div class="portfolio-content">
+                  <h2 class="subtitle">Meditation App</h2>
+                  <p class="index-text">App</p>
+                </div>
               </a>
             </li>
             <li>
@@ -125,8 +132,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="subtitle">Taxi Service</h2>
-                <p class="index-text">Marketing</p>
+                <div class="portfolio-content">
+                  <h2 class="subtitle">Taxi Service</h2>
+                  <p class="index-text">Marketing</p>
+                </div>
               </a>
             </li>
             <li>
@@ -137,8 +146,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="subtitle">Screen Illustrations</h2>
-                <p class="index-text">Design</p>
+                <div class="portfolio-content">
+                  <h2 class="subtitle">Screen Illustrations</h2>
+                  <p class="index-text">Design</p>
+                </div>
               </a>
             </li>
             <li>
@@ -149,8 +160,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="subtitle">Online Courses</h2>
-                <p class="index-text">Marketing</p>
+                <div class="portfolio-content">
+                  <h2 class="subtitle">Online Courses</h2>
+                  <p class="index-text">Marketing</p>
+                </div>
               </a>
             </li>
             <li>
@@ -161,8 +174,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="subtitle">Instagram Stories Concept</h2>
-                <p class="index-text">Design</p>
+                <div class="portfolio-content">
+                  <h2 class="subtitle">Instagram Stories Concept</h2>
+                  <p class="index-text">Design</p>
+                </div>
               </a>
             </li>
             <li>
@@ -173,8 +188,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="subtitle">Organic Food</h2>
-                <p class="index-text">Web Site</p>
+                <div class="portfolio-content">
+                  <h2 class="subtitle">Organic Food</h2>
+                  <p class="index-text">Web Site</p>
+                </div>
               </a>
             </li>
             <li>
@@ -185,8 +202,10 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="subtitle">Fresh Coffee</h2>
-                <p class="index-text">Web Site</p>
+                <div class="portfolio-content">
+                  <h2 class="subtitle">Fresh Coffee</h2>
+                  <p class="index-text">Web Site</p>
+                </div>
               </a>
             </li>
           </ul>
@@ -194,7 +213,7 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="container">
+      <div class="footer-container container">
         <a href="./index.html" class="logo link"
           >Web<span class="web-accent">Studio</span></a
         >
