--- a/index.html
+++ b/index.html
@@ -73,28 +73,28 @@
         <div class="container">
           <h2 class="title-text visually-hidden">Our preferences</h2>
           <ul class="list benefits-list">
-            <li>
+            <li class="benefits-parts">
               <h3 class="subtitle">Strategy</h3>
               <p class="index-text">
                 Our goal is to identify the business problem to walk away with the
                 perfect and creative solution.
               </p>
             </li>
-            <li>
+            <li class="benefits-parts">
               <h3 class="subtitle">Punctuality</h3>
               <p class="index-text">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
-            <li>
+            <li class="benefits-parts">
               <h3 class="subtitle">Diligence</h3>
               <p class="index-text">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
-            <li>
+            <li class="benefits-parts">
               <h3 class="subtitle">Technologies</h3>
               <p class="index-text">
                 Design practice focused on digital experiences. We bring forth a
@@ -110,7 +110,7 @@
         <div class="action-container container">
           <h2 class="title-text section-title">What are we doing</h2>
           <ul class="actions-list list">
-            <li>
+            <li class="actions-list-img">
               <img
                 src="./images/img1.jpg"
                 alt="Computer screen"
@@ -118,7 +118,7 @@
                 height="300"
               />
             </li>
-            <li>
+            <li class="actions-list-img">
               <img
                 src="./images/img2.jpg"
                 alt="Communication in chats"
@@ -126,7 +126,7 @@
                 height="300"
               />
             </li>
-            <li>
+            <li class="actions-list-img">
               <img
                 src="./images/img3.jpg"
                 alt="Mobile app"
