--- a/portfolio.html
+++ b/portfolio.html
@@ -25,9 +25,9 @@
   </head>
 
   <body>
-    <header>
+    <header class="header">
       <div class="header-container container">
-        <nav>
+        <nav class="navigation">
           <a href="./index.html" class="logo link"
             >Web<span class="web-accent">Studio</span></a
           >
