--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </head>
 
   <body>
-    <header>
+    <header class="header">
       <div class="container header-container">
         <nav class="nav">
           <a href="./index.html" class="logo link"
