--- a/portfolio.html
+++ b/portfolio.html
@@ -82,7 +82,7 @@
             </li>
           </ul>
           <ul class="list-portfolio list">
-            <li>
+            <li class="list-img-portfolio">
               <a class="link" href="">
                 <img
                   src="./images/img1a1.jpg"
@@ -96,7 +96,7 @@
                 </div>
               </a>
             </li>
-            <li>
+            <li class="list-img-portfolio">
               <a class="link" href=""
                 ><img
                   src="./images/img1a2.jpg"
@@ -110,7 +110,7 @@
                 </div>
               </a>
             </li>
-            <li>
+            <li class="list-img-portfolio">
               <a class="link" href=""
                 ><img
                   src="./images/img1a3.jpg"
@@ -124,7 +124,7 @@
                 </div>
               </a>
             </li>
-            <li>
+            <li class="list-img-portfolio">
               <a class="link" href=""
                 ><img
                   src="./images/img1a4.jpg"
@@ -138,7 +138,7 @@
                 </div>
               </a>
             </li>
-            <li>
+            <li class="list-img-portfolio">
               <a class="link" href=""
                 ><img
                   src="./images/img1a5.jpg"
@@ -152,7 +152,7 @@
                 </div>
               </a>
             </li>
-            <li>
+            <li class="list-img-portfolio">
               <a class="link" href=""
                 ><img
                   src="./images/img1a6.jpg"
@@ -166,7 +166,7 @@
                 </div>
               </a>
             </li>
-            <li>
+            <li class="list-img-portfolio">
               <a class="link" href=""
                 ><img
                   src="./images/img1a7.jpg"
@@ -180,7 +180,7 @@
                 </div>
               </a>
             </li>
-            <li>
+            <li class="list-img-portfolio">
               <a class="link" href=""
                 ><img
                   src="./images/img1a8.jpg"
@@ -194,7 +194,7 @@
                 </div>
               </a>
             </li>
-            <li>
+            <li class="list-img-portfolio">
               <a class="link" href=""
                 ><img
                   src="./images/img1a9.jpg"
