--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <section class="benefits section">
         <!--наші переваги benefits-->
         <div class="container">
-          <h2 class="title-text visually-hidden">Our preferences</h2>
+          <h2 class="visually-hidden">Our preferences</h2>
           <ul class="list benefits-list">
             <li class="benefits-parts">
               <h3 class="subtitle">Strategy</h3>
